--- a/aMuse.UI/MainWindow.xaml
+++ b/aMuse.UI/MainWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:Wpf1="clr-namespace:Vlc.DotNet.Forms;assembly=Vlc.DotNet.Forms" x:Class="aMuse.UI.MainWindow"
         mc:Ignorable="d"
 
-        Title="MainWindow" MinHeight="500" MinWidth="850" Height="550" Width="850">
+        Title="MainWindow" MinHeight="500" MinWidth="850" Height="550" Width="850" PreviewKeyDown="Window_PreviewKeyDown">
 
     <Grid Background="#FF2C2C2C">
         <Grid.ColumnDefinitions>
