--- a/aMuse.UI/PlaylistsPage.xaml
+++ b/aMuse.UI/PlaylistsPage.xaml
@@ -10,7 +10,8 @@
 
     <Grid  Background="#FF363636">
         <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
-            <ListBox Margin="15 0 15 0" x:Name="listTracks" HorizontalContentAlignment="Stretch" Background="#FF363636" BorderBrush="#FF363636">
+            <ListBox Margin="15 0 15 0" x:Name="listTracks" HorizontalContentAlignment="Stretch"
+                     Background="#FF363636" BorderBrush="#FF363636">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid HorizontalAlignment="Stretch" Background="#FF363636">
@@ -20,11 +21,11 @@
                                 <ColumnDefinition MinWidth="200" Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock TextTrimming="WordEllipsis"   Margin="0 0 15 0" Grid.Column="0" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="{Binding Track}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                                   FontSize="20" MaxWidth="220" Text="{Binding Track}" FontWeight="ExtraLight" Foreground="#FFDCFAFA"/>
                             <TextBlock TextTrimming="WordEllipsis"  Margin="0 0 15 0" Grid.Column="1" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="ALBUM NAME MuSt Be HeRe" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                                   FontSize="20" MaxWidth="220" Text="ALBUM NAME MuSt Be HeRe" FontWeight="ExtraLight" Foreground="#FFDCFAFA"/>
                             <TextBlock TextTrimming="WordEllipsis"  Margin="0 0 15 0" Grid.Column="2" VerticalAlignment="Center" 
-                                   FontSize="20" MaxWidth="220" Text="{Binding Artist}" FontWeight="Bold" Foreground="#FFDCFAFA"/>
+                                   FontSize="20" MaxWidth="220" Text="{Binding Artist}" FontWeight="ExtraLight" Foreground="#FFDCFAFA"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
