--- a/aMuse.UI/LyricsPage.xaml
+++ b/aMuse.UI/LyricsPage.xaml
@@ -23,7 +23,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <ScrollViewer Template="{StaticResource ScrollViewerControlTemplate}"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="3" FontSize="16" FontWeight="Bold" >
-            <TextBlock  Margin="0 30 0 15" TextAlignment="Center"  x:Name="liricsBox" Text="test" Background="#FF363636" Foreground="#FFDCFAFA" />
+            <TextBlock  Margin="0 30 0 15" TextAlignment="Center"  x:Name="lyricsBox" Text="test" Background="#FF363636" Foreground="#FFDCFAFA" />
         </ScrollViewer>
         <Button Width="50" Height="30" Click="Button_ClickBack" Grid.Row="0"   Grid.Column="0" HorizontalAlignment="Left"  VerticalAlignment="Top">
             <Image x:Name="imageInside" Source="Icons/Undo_52px.png"  />
