--- a/aMuse.UI/AddPlaylist.xaml
+++ b/aMuse.UI/AddPlaylist.xaml
@@ -11,11 +11,11 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox  VerticalContentAlignment="Center" Height="40" Name="textBoxName" Foreground="#7EDCFAFA"  GotFocus="textBoxPassword_GotFocus" Width="200" FontSize="20" VerticalAlignment="Center"  Grid.ColumnSpan="3" Background="#FF707070" SelectionBrush="{x:Null}" Style="{DynamicResource TextBoxCustom}" BorderBrush="#FF404040" >
+        <TextBox  VerticalContentAlignment="Center" Height="40" Name="textBoxName" Foreground="#7EDCFAFA" Width="200" FontSize="20" VerticalAlignment="Center"  Grid.ColumnSpan="3" Background="#FF707070" SelectionBrush="{x:Null}" Style="{DynamicResource TextBoxCustom}" BorderBrush="#FF404040" >
             Playlist name
         </TextBox>
         <StackPanel   Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Grid.Row="4" Grid.ColumnSpan="2" Margin="2 2 2 10" Grid.RowSpan="2">
-            <Button Name="okButt" Margin="10 2 10 2 " Click="Button_OK_Click" Width="50" Height="40" Foreground="#FFDCFAFA" FontSize="16"  >Ok</Button>
+            <Button Name="okButt" Margin="10 2 10 2 " Click="Button_OK_Click" Width="60" Height="40" Foreground="#FFDCFAFA" FontSize="16"  >Ok</Button>
             <Button Name="cancelButt" Margin="10 2 10 2 " Click="Button_Cancel_Click" Width="60" Height="40" Foreground="#FFDCFAFA" FontSize="16" >Cancel</Button>
 
         </StackPanel>
