--- a/aMuse.UI/MusicLibrary.xaml
+++ b/aMuse.UI/MusicLibrary.xaml
@@ -9,23 +9,36 @@
       Title="MusicLibrary" Background="#FF363636">
 
     <Grid  Background="#FF363636">
-        <ScrollViewer Margin="0 0 0 0" Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
-            <ListBox  Margin="0 0 9 -1" x:Name="ListTracks" MouseDoubleClick="ListTracks_MouseDoubleClick"  Grid.IsSharedSizeScope="True" FontWeight="Normal">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"  SharedSizeGroup="Column1"/>
-                                <ColumnDefinition Width="Auto"  SharedSizeGroup="Column2"/>
-                                <ColumnDefinition Width="Auto"  SharedSizeGroup="Column3"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock MaxWidth="350"  TextTrimming="WordEllipsis" Margin="0 0 10 0" Grid.Column="0" Text="{Binding Track}" FontSize="20" Foreground="#FFDCFAFA"/>
-                            <TextBlock MaxWidth="400" Margin="0 0 10 0" Grid.Column="2" Text="Album must be here" FontSize="20" Foreground="#FFDCFAFA"/>
-                            <TextBlock  MaxWidth="400" Margin="0 0 10 0" Grid.Column="1" Text="{Binding Artist}" FontSize="20" Foreground="#FFDCFAFA"/>
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+        <ScrollViewer  HorizontalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll = "True" Margin="0 0 0 0" Template="{StaticResource ScrollViewerControlTemplate}"   FontSize="16" FontWeight="Bold" >
+            <StackPanel HorizontalAlignment="Stretch" Orientation="Vertical">
+                <Button HorizontalAlignment="Left" Click="OpenNewDirectory" Margin="0 0 0 2" Width="140" Height="30" >
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Height="24" Margin="5 0 5 0" HorizontalAlignment="Left" Source="Icons/Folder_52px.png"/>
+                        <TextBlock Grid.Column="1" VerticalAlignment="Center" Margin=" 0 0 5 0"  Text="Change folder" Foreground="#FFDCFAFA" FontSize="14" FontWeight="Normal" />
+                    </Grid>
+                </Button>
+                <!--SelectionChanged="ListBox_SelectionChanged" SelectedIndex="{Binding SelectedItemIndex, Mode=TwoWay}"-->
+                <ListBox   Margin="0 0 9 -1" x:Name="ListTracks" MouseDoubleClick="ListTracks_MouseDoubleClick"  Grid.IsSharedSizeScope="True" FontWeight="Normal">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"  SharedSizeGroup="Column1"/>
+                                    <ColumnDefinition Width="Auto"  SharedSizeGroup="Column2"/>
+                                    <ColumnDefinition Width="Auto"  SharedSizeGroup="Column3"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock MaxWidth="350"  TextTrimming="WordEllipsis" Margin="0 0 10 0" Grid.Column="0" Text="{Binding Track}" FontSize="20" Foreground="#FFDCFAFA"/>
+                                <TextBlock MaxWidth="400" Margin="0 0 10 0" Grid.Column="2" Text="Album must be here" FontSize="20" Foreground="#FFDCFAFA"/>
+                                <TextBlock  MaxWidth="400" Margin="0 0 10 0" Grid.Column="1" Text="{Binding Artist}" FontSize="20" Foreground="#FFDCFAFA"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </StackPanel>
         </ScrollViewer>
     </Grid>
 </Page>
