--- a/aMuse.UI/PlaylistsPage.xaml
+++ b/aMuse.UI/PlaylistsPage.xaml
@@ -32,7 +32,7 @@
             </ListBox>
         </ScrollViewer>
 
-        <Button Grid.Row="1" HorizontalAlignment="Stretch" Click="AddNewPlaylist" Margin="0 0 0 2"  Height="30" >
+        <Button Style="{DynamicResource ResourceKey=ClassicWithBorders}" Grid.Row="1" HorizontalAlignment="Stretch" Click="AddNewPlaylist" Margin="0 0 0 2"  Height="30" >
             <Grid >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="30"/>
